# camlib

./: .gitignore  Gemfile  README.md  Rakefile  benchmark.rb  camlib-0.0.1.gem  camlib.gemspec
ext/: .clang-format  CMakeLists.txt  CMakePresets.json  Webcam.cpp  Webcam.hpp  camlib.cpp  camlib.h  library.cpp  library.h
lib/: camlib.rb
lib/camlib/: version.rb
spec/camlib/: webcam_spec.rb
